--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,4 +35,4 @@ jobs:
         run: hugo --minify
 
       - name: Deploy
-        run: aws s3 sync public/ s3://vitalvas.com/ --delete --acl=public-read --cache-control "max-age=43200, public"
+        run: aws s3 sync public/ s3://vitalvas.com/ --delete
