--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,3 +36,6 @@ jobs:
 
       - name: Deploy
         run: aws s3 sync public/ s3://vitalvas.com/ --delete
+
+      - name: Invalidate CloudFront
+        run: aws cloudfront create-invalidation --distribution-id E23GZE7Q7WY1GY --paths "/*"
